# SMSCoop

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: README.md  TLuigi.hxx  ai.hxx  camera.hxx  characters.hxx  gui.hxx  module.hxx  npcLogic.hxx  player.hxx  players.hxx  pvp.hxx  settings.hxx  shine.hxx  splitscreen.hxx  subArea.hxx  surfGesso.hxx  talking.hxx  yoshi.hxx
interface/: coop.hxx
src/: README.md  TLuigi.cpp  camera.cpp  characters.cpp  main.cpp  npcLogic.cpp  player.cpp  shine.cpp  spltscreen.cpp  wire.cpp
src/patches/: ai.cpp  bowser.cpp  camera.cpp  collision.cpp  gui.cpp  players.cpp  pvp.cpp  renderDistance.cpp  shine.cpp  splitscreen.cpp  subArea.cpp  surfGesso.cpp  talking.cpp  voice.cpp  water.cpp  wire.cpp  yoshi.cpp
targets/: GCNKuriboClangDebug.cmake  GCNKuriboClangRelease.cmake
